--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.7",
+    "@prisma/client": "^5.10.2",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "openai": "^4.28.0",
     "react": "^18",
@@ -24,7 +26,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^3.9.4",
     "postcss": "^8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0"
   }
 }
